<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:layout_alignParentTop="true">



            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@mipmap/logo"
                android:contentDescription="@string/app_logo"
                android:layout_marginBottom="@dimen/activity_vertical_margin"

            />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_find_by_proximity_and_time"
                android:layout_marginBottom="10dp"
            />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/train_block_section_margin"
        android:layout_marginBottom="@dimen/train_block_section_margin"
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/offwhite">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_distance"
                android:id="@+id/radio_button_distance"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_time"
                android:id="@+id/radio_button_time"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_both"
                android:id="@+id/radio_button_both"
                />


        </RadioGroup>

    </LinearLayout>


    <fragment
        class="com.uchennafokoye.mywindytrain.TrainListFragment"
        android:id="@+id/train_list_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_train_list" />
</LinearLayout>
