<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@mipmap/logo"
            android:contentDescription="@string/app_logo"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_by_train"
            android:textSize="@dimen/medium_size_text"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/train_block_section_margin"
            android:layout_marginBottom="@dimen/train_block_section_margin"
            android:id="@+id/train_blocks"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/red"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/blue"

                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/brown"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/orange"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/green"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/pink"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/purple"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/train_block_height"
                android:layout_marginTop="@dimen/train_block_margin"
                android:layout_marginBottom="@dimen/train_block_margin"
                android:background="@color/yellow"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_by"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/logo_orange"
            android:textColor="@color/black"
            android:text="Distance &amp; Time"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            />

    </LinearLayout>
